--- a/kadai_002/nagoyameshi/src/main/resources/templates/admin/restaurants/register.html
+++ b/kadai_002/nagoyameshi/src/main/resources/templates/admin/restaurants/register.html
@@ -31,6 +31,8 @@
                                     <hr class="mb-4">
 
                                     <form method="post" th:action="@{/admin/restaurants/create}" th:object="${restaurantRegisterForm}" enctype="multipart/form-data">
+										<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
                                         <div class="form-group row mb-3">
                                             <label for="name" class="col-md-5 col-form-label text-md-left fw-bold">店舗名</label>
 
